tests/error/enum_literal_type_match1.bz
function test()
{
	let _ = .a;
}
